remove too aggressive assert

can happen during runtime, we set it to nullptr anyways,
just remove the assert

BUG: 464149